# parrot-network

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh
.cargo/: config.toml
assets/: styles.css
benches/: max_active_sessions.rs  req_1000.rs
docs/: Genesis_Block.md  Ledger.md  challenge-example-01.md  proof-of-challenge.md  validation.md
misc/: parrot-node.toml  podman-compose.yml  startup.sh
src/: main.rs  node.rs  proto.rs
src/node/: attic.rs  cli.rs  client.rs  constants.rs  db.rs  log.rs  result.rs  server.rs  traits.rs  webui.rs
src/node/attic/: file_system.rs
src/node/cli/: config_file.rs  help.rs  ip_address.rs  port_number.rs  traits.rs  verbose.rs  webui_ip.rs  webui_port.rs
src/node/client/: http_client.rs  result.rs
src/node/server/: endpoints.rs  health_check.rs  result.rs
src/node/server/api/: client.rs
src/node/server/api/client/: new.rs
src/node/webui/: pages.rs  result.rs
src/node/webui/pages/: error_404.rs  pico_min_css.rs  root.rs  styles_css.rs
src/proto/: blockchain.rs  dag.rs  helpers.rs  node_session.rs
src/proto/blockchain/: block.rs  constants.rs  pvm.rs  result.rs  tests.rs  tokens.rs  traits.rs  transaction.rs  wallet.rs
src/proto/blockchain/block/: block_hash.rs  index.rs  nonce.rs  payload.rs  status.rs  timestamp.rs  transactions.rs
src/proto/blockchain/pvm/: attic.rs  opcodes.rs
src/proto/blockchain/pvm/attic/: btc_opcodes.rs
src/proto/dag/: tests.rs  validator.rs
src/proto/dag/validator/: tests.rs
src/proto/helpers/: hex_to_string.rs  safe_vec.rs
src/proto/node_session/: fields.rs  pki_client_challenge.rs  pki_server_challenge.rs
src/proto/node_session/pki_client_challenge/: builder.rs  fields.rs
src/proto/node_session/pki_server_challenge/: builder.rs  fields.rs
