[package]
edition = "2021"
rust-version = "1.81.0"
name = "parrot-network"
version = "0.0.21"
description = "Experimental public Distributed Ledger Technology (DLT)"
readme = "README.md"
keywords = ["dag", "dlt", "ledger", "web3", "crypto"]
categories = ["network-programming", "web-programming", "rust-patterns"]
license = "MIT"
repository = "https://github.com/ancos2505/parrot-network"

[[bin]]
name = "parrot-node"
path = "src/main.rs"

[dependencies]
array-bytes = "6.2.3"
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
falcon-rust = "0.1.2"
h10 = "0.6"
html-rs = "0.3"
rand = "0.8.5"
redb = "2.1.2"
serde = { version = "1.0.209", features = ["serde_derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
toml = "0.8.19"


[features]
default = []
debug = []

[[bench]]
name = "max_active_sessions"
harness = false

[[bench]]
name = "req_1000"
harness = false

[lints.rust]
unsafe-code = "forbid"
deprecated-in-future = "forbid"
deprecated-safe = "forbid"
elided-lifetimes-in-paths = "forbid"
explicit-outlives-requirements = "forbid"
ffi-unwind-calls = "forbid"
# fuzzy-provenance-casts = "forbid"  #Unstable
# impl-trait-overcaptures = "forbid"  #Unstable
keyword-idents-2018 = "forbid"
keyword-idents-2024 = "forbid"
let-underscore-drop = "forbid"
# lossy-provenance-casts = "forbid"  #Unstable
macro-use-extern-crate = "forbid"
meta-variable-misuse = "forbid"
missing-abi = "forbid"
# missing-copy-implementations = "allow"
missing-debug-implementations = "forbid"
# missing-docs = "warn"
missing-unsafe-on-extern = "forbid"
# multiple-supertrait-upcastable = "forbid"  #Unstable
# must-not-suspend = "forbid"  #Unstable
non-ascii-idents = "forbid"
# non-exhaustive-omitted-patterns = "forbid"  #Unstable
non-local-definitions = "forbid"
redundant-lifetimes = "forbid"
rust-2021-incompatible-closure-captures = "forbid"
rust-2021-incompatible-or-patterns = "forbid"
rust-2021-prefixes-incompatible-syntax = "forbid"
rust-2021-prelude-collisions = "forbid"
# rust-2024-incompatible-pat = "forbid"  #Unstable
single-use-lifetimes = "forbid"
trivial-casts = "deny"
trivial-numeric-casts = "forbid"
unit-bindings = "forbid"
unnameable-types = "forbid"
unsafe-op-in-unsafe-fn = "forbid"
unstable-features = "forbid"
# unused-crate-dependencies = "allow"
unused-extern-crates = "deny"
unused-import-braces = "forbid"
unused-lifetimes = "forbid"
unused-macro-rules = "forbid"
unused-qualifications = "deny"
unused-results = "allow"
variant-size-differences = "forbid"
invalid-type-param-default = "forbid"
patterns-in-fns-without-body = "forbid"

[lints.clippy]
all = "deny"

[badges]
maintenance = { status = "experimental" }
